Updating ember.js
- Ember 1.0-pre is throwing some errors with the latest ember-data. Using an Ember build from 451ef3d6eed81616264eed7add1f18db14fce84d

--- a/tests/index.html
+++ b/tests/index.html
@@ -7,7 +7,8 @@
   <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0.beta6/handlebars.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/ember.js/1.0.pre/ember-1.0.pre.min.js"></script>
+  
+  <script src="lib/ember.js"></script>
   <script src="lib/ember-data.js"></script>
 
   <script src="tastypie_adapter.js"></script>
