Becomes community tests friendly
- Project structure like other ember project (packages)
- Rakefile to test with Phantom
- Autotests working on OS X

--- a/tests/index.html
+++ b/tests/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
                     "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
@@ -6,13 +6,13 @@
   <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0.beta6/handlebars.min.js"></script>
-  
+  <script src="lib/handlebars.min.js"></script>
   <script src="lib/ember.js"></script>
   <script src="lib/ember-data.js"></script>
 
+  <script src="tastypie_serializer.js"></script>
   <script src="tastypie_adapter.js"></script>
-  
+
   <script src="tastypie_adapter_test.js"></script>
 
 
