--- a/tests/index.html
+++ b/tests/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
 
-  <script src="lib/handlebars.min.js"></script>
+  <script src="lib/handlebars.js"></script>
   <script src="lib/ember.js"></script>
   <script src="lib/ember-data.js"></script>
 
