--- a/tests/index.html
+++ b/tests/index.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
-  <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.12.0.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
 
-  <script src="lib/handlebars.js"></script>
-  <script src="lib/ember-1.0.0-rc.4.js"></script>
+  <script src="lib/handlebars-1.0.0.js"></script>
+  <script src="lib/ember.js"></script>
   <script src="lib/ember-data.js"></script>
 
   <script src="tastypie_serializer.js"></script>
