Starting to update tests. Added @pedrokiefer tests
Many failing need to be fixed

--- a/tests/index.html
+++ b/tests/index.html
@@ -3,17 +3,19 @@
 <html>
 <head>
   <script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
-  <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.13.0.css" type="text/css" media="screen" />
+  <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-1.13.0.js"></script>
 
-  <script src="lib/handlebars.js"></script>
-  <script src="lib/ember-1.0.0-rc.4.js"></script>
+  <script src="lib/handlebars-v1.3.0.js"></script>
+  <script src="lib/ember.js"></script>
   <script src="lib/ember-data.js"></script>
 
   <script src="tastypie_serializer.js"></script>
   <script src="tastypie_adapter.js"></script>
 
+  <script src="ember_configuration.js"></script>
   <script src="tastypie_adapter_test.js"></script>
+  <script src="tastypie_serializer_test.js"></script>
 
 
 </head>
