--- a/tests/index.html
+++ b/tests/index.html
@@ -1,30 +1,72 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-                    "http://www.w3.org/TR/html4/loose.dtd">
+<!doctype html>
 <html>
-<head>
-  <script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
-  <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.13.0.css" type="text/css" media="screen" />
-  <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-1.13.0.js"></script>
+  <head>
+    <meta charset="utf-8">
+    <title>Ember Data Tastypie Adapter</title>
+    <link rel="stylesheet" href="/bower_components/qunit/qunit/qunit.css">
+    <script src="/bower_components/qunit/qunit/qunit.js"></script>
+    <script src="/testem.js"></script>
+    <script src="qunit_configuration.js"></script>
+    <script src="/bower_components/handlebars/handlebars.js"></script>
 
-  <script src="lib/handlebars-v1.3.0.js"></script>
-  <script src="lib/ember.js"></script>
-  <script src="lib/ember-data.js"></script>
+    <script type="text/javascript">
+      window.loadScript = function(url) {
+            document.write(unescape('%3Cscript src="'+url+'"%3E%3C/script%3E'));
+      };
+    </script>
 
-  <script src="tastypie_serializer.js"></script>
-  <script src="tastypie_adapter.js"></script>
+    <script type="text/javascript">
+      // Load custom version of jQuery if possible (assign to window so IE8 can use in later blocks)
+      var jQueryVersion = QUnit.urlParams.jquery;
+      if (jQueryVersion) {
+        loadScript('https://code.jquery.com/jquery-'+jQueryVersion+'.js');
+      }
+      // Close the script tag to make sure document.write happens
+    </script>
 
-  <script src="ember_configuration.js"></script>
-  <script src="tastypie_adapter_test.js"></script>
-  <script src="tastypie_serializer_test.js"></script>
+    <script type="text/javascript">
+      // Fallback to default jQuery
+      if (jQueryVersion !== 'none' && !window.jQuery) {
+        loadScript('/bower_components/jquery/jquery.js');
+      }
+      // Close the script tag to make sure document.write happens
+    </script>
+
+    <script src="ember_configuration.js"></script>
+    <script type="text/javascript">
+      var emberChannel = QUnit.urlParams.emberchannel || "release", emberPath;
+
+      if (emberChannel === "release") {
+        emberPath = "/bower_components/ember/ember.js";
+      } else {
+        emberPath = 'https://s3.amazonaws.com/builds.emberjs.com/' + emberChannel + '/ember.js';
+      }
+
+      loadScript(emberPath);
+    </script>
+    <script type="text/javascript">
+      var emberChannel = QUnit.urlParams.emberchannel || "release", emberPath;
+
+      if (emberChannel === "release") {
+        emberDataPath = "/bower_components/ember-data/ember-data.js";
+      } else {
+        emberDataPath = 'https://s3.amazonaws.com/builds.emberjs.com/' + emberChannel + '/ember-data.js';
+      }
+
+      loadScript(emberDataPath);
+    </script>
+    <!--[if lte IE 8]>
+      <script src="/bower_components/es5-shim/es5-shim.js"></script>
+      <script src="/bower_components/es5-shim/es5-sham.js"></script>
+    <![endif]]-->
 
 
-</head>
+    <script src="/ember-data-tastypie-adapter.js"></script>
+    <!--script src="ember-data-setup.js"></script-->
+    <script src="tests.js"></script>
+  </head>
 <body>
-  <h1 id="qunit-header">QUnit example</h1>
- <h2 id="qunit-banner"></h2>
- <div id="qunit-testrunner-toolbar"></div>
- <h2 id="qunit-userAgent"></h2>
- <ol id="qunit-tests"></ol>
- <div id="qunit-fixture">test markup, will be hidden</div>
+  <div id="qunit"></div>
+  <div id="qunit-fixture"></div>
 </body>
 </html>
