--- a/tests/index.html
+++ b/tests/index.html
@@ -1,72 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Ember Data Tastypie Adapter</title>
-    <link rel="stylesheet" href="/bower_components/qunit/qunit/qunit.css">
-    <script src="/bower_components/qunit/qunit/qunit.js"></script>
-    <script src="/testem.js"></script>
-    <script src="qunit_configuration.js"></script>
-    <script src="/bower_components/handlebars/handlebars.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Dummy Tests</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script type="text/javascript">
-      window.loadScript = function(url) {
-            document.write(unescape('%3Cscript src="'+url+'"%3E%3C/script%3E'));
-      };
-    </script>
+    {{content-for 'head'}}
+    {{content-for 'test-head'}}
 
-    <script type="text/javascript">
-      // Load custom version of jQuery if possible (assign to window so IE8 can use in later blocks)
-      var jQueryVersion = QUnit.urlParams.jquery;
-      if (jQueryVersion) {
-        loadScript('https://code.jquery.com/jquery-'+jQueryVersion+'.js');
+    <link rel="stylesheet" href="assets/vendor.css">
+    <link rel="stylesheet" href="assets/dummy.css">
+    <link rel="stylesheet" href="assets/test-support.css">
+    <style>
+      #ember-testing-container {
+        position: absolute;
+        background: white;
+        bottom: 0;
+        right: 0;
+        width: 640px;
+        height: 384px;
+        overflow: auto;
+        z-index: 9999;
+        border: 1px solid #ccc;
       }
-      // Close the script tag to make sure document.write happens
-    </script>
-
-    <script type="text/javascript">
-      // Fallback to default jQuery
-      if (jQueryVersion !== 'none' && !window.jQuery) {
-        loadScript('/bower_components/jquery/jquery.js');
+      #ember-testing {
+        zoom: 50%;
       }
-      // Close the script tag to make sure document.write happens
-    </script>
+    </style>
 
-    <script src="ember_configuration.js"></script>
-    <script type="text/javascript">
-      var emberChannel = QUnit.urlParams.emberchannel || "release", emberPath;
-
-      if (emberChannel === "release") {
-        emberPath = "/bower_components/ember/ember.js";
-      } else {
-        emberPath = 'https://s3.amazonaws.com/builds.emberjs.com/' + emberChannel + '/ember.js';
-      }
-
-      loadScript(emberPath);
-    </script>
-    <script type="text/javascript">
-      var emberChannel = QUnit.urlParams.emberchannel || "release", emberPath;
-
-      if (emberChannel === "release") {
-        emberDataPath = "/bower_components/ember-data/ember-data.js";
-      } else {
-        emberDataPath = 'https://s3.amazonaws.com/builds.emberjs.com/' + emberChannel + '/ember-data.js';
-      }
-
-      loadScript(emberDataPath);
-    </script>
-    <!--[if lte IE 8]>
-      <script src="/bower_components/es5-shim/es5-shim.js"></script>
-      <script src="/bower_components/es5-shim/es5-sham.js"></script>
-    <![endif]]-->
-
-
-    <script src="/ember-data-tastypie-adapter.js"></script>
-    <!--script src="ember-data-setup.js"></script-->
-    <script src="tests.js"></script>
+    {{content-for 'head-footer'}}
+    {{content-for 'test-head-footer'}}
   </head>
-<body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
-</body>
+  <body>
+
+    {{content-for 'body'}}
+    {{content-for 'test-body'}}
+    <script src="assets/vendor.js"></script>
+    <script src="assets/test-support.js"></script>
+    <script src="assets/dummy.js"></script>
+    <script src="testem.js"></script>
+    <script src="assets/test-loader.js"></script>
+
+    {{content-for 'body-footer'}}
+    {{content-for 'test-body-footer'}}
+  </body>
 </html>
